--- a/PLC/Instrument Control/Instrument Control GUI (BU).kv
+++ b/PLC/Instrument Control/Instrument Control GUI (BU).kv
@@ -1,114 +1,113 @@
 <BoxLayout>:
     control_text_width: 200
+    element_height_1: '40dp'
+    element_height_2: '80dp'
+    element_height_rbw: '60dp'
+    element_spacing: 10
+
+<MDRaisedButton>:
+    font_size: sp(16)  # Apply to all MDRaisedButtons
+
+<MDLabel>:
+    font_size: sp(16)  # Apply to all MDLabels
+
+<MDTextField>:
+    font_size: sp(16)  # Apply to all MDLabels
 
 
+# Main window to fit vertically: Spectrum screen, labels, and buttons
 BoxLayout:
     orientation: 'vertical'
 
-    # Image taking top half of the window
+    # Spectrum screen
     Image:
         size_hint_y: 0.45  # Top half of the window
         source: 'Temp pic.png'  # Use your image here
 
-    # Main Content Area
+    # Two columns of labels
     BoxLayout:
         orientation: 'horizontal'
         size_hint_y: 0.5  # Bottom half of the window
         padding: 10
 
-        # Left Side with Range Slider and Number Inputs
+        # Left Side labels
         BoxLayout:
             orientation: 'vertical'
             size_hint_x: 0.5
-            spacing: 10
+            spacing: root.element_spacing
 
-            # Custom Range Slider (Start and Stop Sliders) with Title
+            # Start Frequency
             BoxLayout:
                 orientation: 'horizontal'
                 size_hint_y: None
-                height: '48dp'
-                spacing: 10
-
-                MDLabel:
-                    text: "Frequency Range [kHz]: "
-                    size_hint_x: None
-                    width: root.control_text_width
-
-                MDSlider:
-                    id: slider_start
-                    min: 0
-                    max: 100
-                    value: app.start_value
-                    step: 1
-                    on_value: app.update_slider_values_from_slider('start', self.value)
-
-                MDSlider:
-                    id: slider_stop
-                    min: 0
-                    max: 100
-                    value: app.stop_value
-                    step: 1
-                    on_value: app.update_slider_values_from_slider('stop', self.value)
-
-            # Input Fields for Start and Stop Values
-            BoxLayout:
-                orientation: 'horizontal'
-                size_hint_y: None
-                height: '48dp'
-                spacing: 10
+                height: root.element_height_2
+                spacing: root.element_spacing
 
                 MDLabel:
                     text: "Start Frequency [kHz]: "
                     size_hint_x: None
                     width: root.control_text_width
 
-                MDTextField:
-                    id: start_input
-                    hint_text: "Enter start frequency"
-                    text: str(app.start_value)
-                    input_filter: 'int'
-                    on_text_validate: app.set_start_value(self.text)
+                BoxLayout:
+                    orientation: 'vertical'
+                    size_hint_y: None
+                    height: root.element_height_2
+                    spacing: root.element_spacing
 
+                    MDTextField:
+                        id: start_input
+                        hint_text: "Enter start frequency"
+                        text: str(app.start_value)
+                        input_filter: 'int'
+                        on_text_validate: app.set_start_value(self.text)
+
+                    MDSlider:
+                        id: slider_start
+                        min: 0
+                        max: 100
+                        value: app.start_value
+                        step: 1
+                        on_value: app.update_start_slider(self.value)
+
+            # Stop Frequency
             BoxLayout:
                 orientation: 'horizontal'
                 size_hint_y: None
-                height: '48dp'
-                spacing: 10
+                height: root.element_height_2
+                spacing: root.element_spacing
 
                 MDLabel:
                     text: "Stop Frequency [kHz]: "
                     size_hint_x: None
                     width: root.control_text_width
 
-                MDTextField:
-                    id: stop_input
-                    hint_text: "Enter stop frequency"
-                    text: str(app.stop_value)
-                    input_filter: 'int'
-                    on_text_validate: app.set_stop_value(self.text)
+                BoxLayout:
+                    orientation: 'vertical'
+                    size_hint_y: None
+                    height: root.element_height_2
+                    spacing: root.element_spacing
 
-            # Traces Dropdown Menu
+                    MDTextField:
+                        id: stop_input
+                        hint_text: "Enter stop frequency"
+                        text: str(app.stop_value)
+                        input_filter: 'int'
+                        on_text_validate: app.set_stop_value(self.text)
+
+                    MDSlider:
+                        id: slider_stop
+                        min: 0
+                        max: 100
+                        value: app.stop_value
+                        step: 1
+                        on_value: app.update_stop_slider(self.value)
+
+            # RBW
             BoxLayout:
                 orientation: 'horizontal'
                 size_hint_y: None
-                height: '48dp'
-                spacing: 10
-
-                MDLabel:
-                    text: "Traces: "
-                    size_hint_x: None
-                    width: root.control_text_width
-
-                MDDropDownItem:
-                    id: traces_dropdown
-                    text: "Average"  # Set default value
-                    on_release: app.menu_traces.open()
-
-            BoxLayout:
-                orientation: 'horizontal'
-                size_hint_y: None
-                height: '48dp'
-                spacing: 10
+                height: root.element_height_rbw
+                spacing: root.element_spacing
 
                 MDLabel:
                     text: "RBW [kHz]: "
@@ -119,11 +118,12 @@ BoxLayout:
                     hint_text: "Enter RBW"
                     input_filter: 'float'
 
+            # VBW
             BoxLayout:
                 orientation: 'horizontal'
                 size_hint_y: None
-                height: '48dp'
-                spacing: 10
+                height: root.element_height_1
+                spacing: root.element_spacing
 
                 MDLabel:
                     text: "VBW [kHz]: "
@@ -134,11 +134,11 @@ BoxLayout:
                     hint_text: "Enter VBW"
                     input_filter: 'float'
 
-            # Test type Dropdown Menu
+            # Dropdown - Test type (frequency selector)
             BoxLayout:
                 orientation: 'horizontal'
                 size_hint_y: None
-                height: '48dp'
+                height: root.element_height_1
 
                 MDLabel:
                     text: "Test type: "
@@ -150,19 +150,36 @@ BoxLayout:
                     text: "Full range"  # Set default value
                     on_release: app.menu_test_type.open()
 
-        # Right Side with Coupling and Average type dropdowns and Number Inputs
+        # Right Side labels
         BoxLayout:
             orientation: 'vertical'
             size_hint_x: 0.5
             padding: 10
-            spacing: 10
+            spacing: root.element_spacing
 
-            # Impedance Input at the top
+            # Dropdown - Traces (Avg and MH)
             BoxLayout:
                 orientation: 'horizontal'
                 size_hint_y: None
-                height: '48dp'
-                spacing: 10
+                height: root.element_height_1
+                spacing: root.element_spacing
+
+                MDLabel:
+                    text: "Traces: "
+                    size_hint_x: None
+                    width: root.control_text_width
+
+                MDDropDownItem:
+                    id: traces_dropdown
+                    text: "Average"  # Set default value
+                    on_release: app.menu_traces.open()
+
+            # Impedance
+            BoxLayout:
+                orientation: 'horizontal'
+                size_hint_y: None
+                height: root.element_height_1
+                spacing: root.element_spacing
 
                 MDLabel:
                     text: "Impedance [ohm]: "
@@ -173,11 +190,11 @@ BoxLayout:
                     hint_text: "Enter impedance"
                     input_filter: 'int'
 
-            # Coupling Dropdown
+            # Dropdown - Coupling (AC and DC)
             BoxLayout:
                 orientation: 'horizontal'
                 size_hint_y: None
-                height: '48dp'
+                height: root.element_height_1
 
                 MDLabel:
                     text: "Coupling: "
@@ -189,11 +206,11 @@ BoxLayout:
                     text: "AC"  # Set default value
                     on_release: app.menu_coupling.open()
 
-            # Average Type Dropdown
+            # Dropdown - Average Type (Log and RMS)
             BoxLayout:
                 orientation: 'horizontal'
                 size_hint_y: None
-                height: '48dp'
+                height: root.element_height_1
 
                 MDLabel:
                     text: "Average type: "
@@ -205,12 +222,12 @@ BoxLayout:
                     text: "Log"  # Set default value
                     on_release: app.menu_avg_type.open()
 
-            # Number inputs for Attenuation, Reference Level, and Y Reference Level
+            # Attenuation
             BoxLayout:
                 orientation: 'horizontal'
                 size_hint_y: None
-                height: '48dp'
-                spacing: 10
+                height: root.element_height_1
+                spacing: root.element_spacing
 
                 MDLabel:
                     text: "Attenuation [dB]: "
@@ -221,11 +238,12 @@ BoxLayout:
                     hint_text: "Enter attenuation"
                     input_filter: 'float'
 
+            # Reference Level
             BoxLayout:
                 orientation: 'horizontal'
                 size_hint_y: None
-                height: '48dp'
-                spacing: 10
+                height: root.element_height_1
+                spacing: root.element_spacing
 
                 MDLabel:
                     text: "Reference Level [dBm]: "
@@ -236,11 +254,12 @@ BoxLayout:
                     hint_text: "Enter reference level"
                     input_filter: 'float'
 
+            # Y Reference Level
             BoxLayout:
                 orientation: 'horizontal'
                 size_hint_y: None
-                height: '48dp'
-                spacing: 10
+                height: root.element_height_1
+                spacing: root.element_spacing
 
                 MDLabel:
                     text: "Y Reference Level [dBm]: "
